# DocAI

./: .gitignore  main.py  pyproject.toml  test.py
content/: content.txt  content_html2text.txt
html/: output.html
links/: absoluteLinks.txt  ignoredLinks.txt  resolvedRelativeLinks.txt
strategy/: contentCleaning.txt  linkCleaning.txt
utils/: contentUtils.py  linkUtils.py  utils.py
